--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     background-color: hsl(146, 50%, 36%, 0.5);
     font-weight: bold;
     height: auto;
-    overflow: auto;
+    /* overflow: auto; */
     padding: 15px;
     text-shadow: -2px 2px 1px rgb(17, 94, 55);
 }
@@ -29,20 +29,25 @@ body{
     position: relative;
     float: left;
     width: 274px;
-    margin: 25px;
+    margin: 30px;
+    border: solid 25px hsl(146, 50%, 36%, 0.5);
+    padding: -15 -65 -15 2;
   }
 .work:nth-child(even) {
-    margin-right: 80px;
-  }
+    margin-right: 70px;
+}
+.work:nth-child(odd){
+    margin-left: 60px;
+}
 .work img {
-    width: 100%;
+    width: 120%;
     border: 0 none;
-    opacity: 0.8;
+    opacity: 0.9;
   }
 .work h3 {
     position: absolute;
     bottom: 20px;
-    width: 100%;
+    width: 120%;
     padding: 15px;
     margin-bottom: 0;
     font-weight: 400;
