--- a/style.css
+++ b/style.css
@@ -5,18 +5,16 @@
     margin: 20px;
 }
 body{
- background-image: url(./images/coding_line_seamless_pattern-01.jpg);
- background-repeat: repeat;
+ background-image: url(./images/space-624054_1280.jpg);
+ background-size: cover;
  background-blend-mode: darken;
 }
 .container{
-    color: rgb(204, 245, 188);
-    background-color: hsl(146, 50%, 36%, 0.5);
+    color: rgb(212, 180, 231);
+    background-color: rgba(13, 102, 51, 0.45);
     font-weight: bold;
     height: auto;
-    /* overflow: auto; */
     padding: 15px;
-    text-shadow: -2px 2px 1px rgb(17, 94, 55);
 }
 .navbar{
     text-shadow: -2px 1px 1px rgb(17, 94, 55, 0.45);
@@ -30,7 +28,7 @@ body{
     float: left;
     width: 274px;
     margin: 30px;
-    border: solid 25px hsl(146, 50%, 36%, 0.5);
+    border: solid 25px rgba(46, 104, 138, 0.5);
     padding: -15 -65 -15 2;
   }
 .work:nth-child(even) {
@@ -61,6 +59,20 @@ body{
   #portfolio-h2{
       margin-left: 100px;
   }
+  h1{
+      text-shadow: -2.25px 2px 1px black;
+      
+  }
   h2{
       margin: 35px auto 35px 35px;
+      text-shadow: -2px 2px 1px rgb(72, 17, 94);
+      border-bottom: solid 3px rgb(72, 17, 94);
+  }
+  #bio-text{
+      font-weight: 635;
+      text-shadow: -1.25px 1.25px 1px rgb(73, 24, 102);
+  }
+  .portfolio-list{
+    background-color: rgba(13, 102, 51, 0.25);
+    height: 140vh;
   }
