block to inline-block line 99

--- a/style.css
+++ b/style.css
@@ -96,5 +96,5 @@ a.active{
     height: 140vh;
   }
   .navbar-collapse.collapse.in {
-    display: block!important;
+    display: inline-block!important;
   }
