--- a/style.css
+++ b/style.css
@@ -98,4 +98,6 @@ a.active{
   .navbar-collapse.collapse.in {
     display: block!important;
     position: absolute !important;
+    overflow: auto; 
+    flex-wrap: wrap;
   }
