--- a/style.css
+++ b/style.css
@@ -95,3 +95,6 @@ a.active{
     background-color: rgba(13, 102, 51, 0.25);
     height: 140vh;
   }
+  .navbar-collapse.collapse.in {
+    align-content: center;
+  }
